# Wait

./: .gitignore  README.md  requirements.txt
backend/: Backend_Wait.py  CMakeLists.txt  README.md  backend.py  label_map.json  slp_bgem3_best.pt
backend/src/: main.cpp
backend/src/Wait_backend/: Wait_backend.pro  main.cpp  wait_client_session.cpp  wait_client_session.h  wait_server.cpp  wait_server.h
docs/: ARCHITECTURE.md  ROADMAP.md  WEBSOCKET_PROTOCOL.md
frontend/: app.js  index.html  styles.css
scripts/: dataset_maker.py  dataset_maker_predict_format.py  findtuner.py  ingestion.py  lucide_icons.jsonl  train_SLP.py
